@@ -7,14 +7,8 @@ package com.microsoft.azure.toolkit.intellij.legacy.function.runner.localrun;
 
 import com.google.gson.JsonObject;
 import com.intellij.execution.BeforeRunTask;
-import com.intellij.execution.ExecutionException;
 import com.intellij.execution.Executor;
-import com.intellij.execution.configurations.ConfigurationFactory;
-import com.intellij.execution.configurations.JavaRunConfigurationModule;
-import com.intellij.execution.configurations.LocatableConfiguration;
-import com.intellij.execution.configurations.RunConfiguration;
-import com.intellij.execution.configurations.RunProfileState;
-import com.intellij.execution.configurations.RunProfileWithCompileBeforeLaunchOption;
+import com.intellij.execution.configurations.*;
 import com.intellij.execution.runners.ExecutionEnvironment;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.module.Module;
@@ -24,28 +18,21 @@ import com.intellij.openapi.options.ConfigurationException;
 import com.intellij.openapi.options.SettingsEditor;
 import com.intellij.openapi.project.Project;
 import com.microsoft.azure.toolkit.intellij.connector.Connection;
-import com.microsoft.azure.toolkit.intellij.connector.ConnectionManager;
-import com.microsoft.azure.toolkit.intellij.connector.ConnectionRunnerForRunConfiguration;
 import com.microsoft.azure.toolkit.intellij.connector.IConnectionAware;
+import com.microsoft.azure.toolkit.intellij.connector.dotazure.AzureModule;
+import com.microsoft.azure.toolkit.intellij.connector.dotazure.DotEnvBeforeRunTaskProvider;
+import com.microsoft.azure.toolkit.intellij.connector.dotazure.Profile;
 import com.microsoft.azure.toolkit.intellij.legacy.common.AzureRunConfigurationBase;
 import com.microsoft.azure.toolkit.intellij.legacy.function.runner.core.FunctionUtils;
-import lombok.Getter;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.annotation.Nonnull;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static com.microsoft.azure.toolkit.intellij.common.AzureBundle.message;
@@ -54,8 +41,6 @@ public class FunctionRunConfiguration extends AzureRunConfigurationBase<Function
         implements LocatableConfiguration, RunProfileWithCompileBeforeLaunchOption, IConnectionAware {
     private JsonObject appSettingsJsonObject;
     private FunctionRunModel functionRunModel;
-    @Getter
-    private final Set<Connection<?, ?>> connections = new HashSet<>();
 
     protected FunctionRunConfiguration(@NotNull Project project, @NotNull ConfigurationFactory factory, String name) {
         super(project, factory, name);
@@ -81,11 +66,6 @@ public class FunctionRunConfiguration extends AzureRunConfigurationBase<Function
             this.myModule.setModule(module);
         }
         return module;
-    }
-
-    @Override
-    public void addConnection(@Nonnull Connection<?, ?> connection) {
-        connections.add(connection);
     }
 
     @Override
@@ -116,7 +96,7 @@ public class FunctionRunConfiguration extends AzureRunConfigurationBase<Function
 
     @Nullable
     @Override
-    public RunProfileState getState(@NotNull Executor executor, @NotNull ExecutionEnvironment executionEnvironment) throws ExecutionException {
+    public RunProfileState getState(@NotNull Executor executor, @NotNull ExecutionEnvironment executionEnvironment) {
         return new FunctionRunState(getProject(), this, executor);
     }
 
@@ -210,7 +190,7 @@ public class FunctionRunConfiguration extends AzureRunConfigurationBase<Function
         if (StringUtils.isEmpty(this.getFuncPath())) {
             try {
                 this.setFuncPath(FunctionUtils.getFuncPath());
-            } catch (IOException | InterruptedException ex) {
+            } catch (final IOException | InterruptedException ex) {
                 // ignore;
             }
         }
@@ -218,28 +198,29 @@ public class FunctionRunConfiguration extends AzureRunConfigurationBase<Function
             this.setFunctionHostArguments(FunctionUtils.getDefaultFuncArguments());
         }
         try {
-            prepareBeforeRunTasks();
+            prepareBeforeRunTasks(module);
         } catch (final Throwable throwable) {
             // ignore;
         }
     }
 
     // workaround to correct before run tasks in quick launch as BeforeRunTaskAdder may not work or have wrong config in task in this case
-    private void prepareBeforeRunTasks() {
-        final List<Connection<?, ?>> connections = this.getProject().getService(ConnectionManager.class).getConnections();
+    private void prepareBeforeRunTasks(@NotNull final Module module) {
+        final Profile profile = Optional.ofNullable(AzureModule.from(module)).map(AzureModule::getDefaultProfile).orElse(null);
+        final List<Connection<?, ?>> connections = Optional.ofNullable(profile).map(Profile::getConnections).orElse(Collections.emptyList());
         if (CollectionUtils.isEmpty(connections)) {
             return;
         }
         final List<BeforeRunTask<?>> tasks = this.getBeforeRunTasks();
-        final List<ConnectionRunnerForRunConfiguration.MyBeforeRunTask> rcTasks = tasks.stream().filter(t -> t instanceof ConnectionRunnerForRunConfiguration.MyBeforeRunTask)
-                .map(t -> (ConnectionRunnerForRunConfiguration.MyBeforeRunTask)t)
+        final List<DotEnvBeforeRunTaskProvider.LoadDotEnvBeforeRunTask> rcTasks = tasks.stream().filter(t -> t instanceof DotEnvBeforeRunTaskProvider.LoadDotEnvBeforeRunTask)
+                .map(t -> (DotEnvBeforeRunTaskProvider.LoadDotEnvBeforeRunTask)t)
                 .collect(Collectors.toList());
-        final List<ConnectionRunnerForRunConfiguration.MyBeforeRunTask> invalidTasks =
-                rcTasks.stream().filter(t -> !Objects.equals(this, t.getConfig())).collect(Collectors.toList());
+        final List<DotEnvBeforeRunTaskProvider.LoadDotEnvBeforeRunTask> invalidTasks =
+                rcTasks.stream().filter(t -> !Objects.equals(this, t.getConfig())).toList();
         tasks.removeAll(invalidTasks);
         rcTasks.removeAll(invalidTasks);
         if (CollectionUtils.isEmpty(rcTasks) && connections.stream().anyMatch(c -> c.isApplicableFor(this))) {
-            this.getBeforeRunTasks().add(new ConnectionRunnerForRunConfiguration.MyBeforeRunTask(this));
+            this.getBeforeRunTasks().add(new DotEnvBeforeRunTaskProvider.LoadDotEnvBeforeRunTask(this));
         }
     }
 
